gtk/sass/3.20/_3rd-party.scss
/* ... */
// MPRIS Applet
.raven-mpris {
  border: none;
  color: $fg_color;
  background-color: gtkopacity($dark_color, 0.9);

  button.image-button { padding: rem(8px); }
}

// notifications
.budgie-notification-window {
  border-radius: 2px;
  background-color: transparent;

  // draw actual backgrounds
  .drop-shadow { background-color: gtkopacity($inverted_dark_color, 0.9); }
}

.budgie-notification {
  // always use dark-variant
  color: $inverted_fg_color;
  background-color: transparent;

  .notification-title {
    color: $inverted_secondary_fg_color;
    font-size: 110%;
    font-weight: 500;
  }

  .notification-body {
    color: $inverted_fg_color;
    font-size: 90%;
    font-weight: 400;
  }

  button { // OSD-style buttons
    color: $secondary_accent_color;
    &:hover,
    &:active,
    &:checked { color: $accent_color; }
    &:disabled { color: gtkopacity($accent_color, 0.4); }
  }
}

// run-dialog styling
.background.csd.budgie-run-dialog {
  border: none;
  background-color: transparent;

  decoration {
    border-radius: 2px; // hard-coded 6px is ugly...
    border: none;
    background-color: gtkopacity($inverted_dark_color, 0.9);

    headerbar { border-radius: 2px; }
  }

  scrolledwindow {      // FIXME: using GtkEntry style-class!?
    border-image: none; // remove underline indicator
    background-color: transparent;

    list {
      background-color: transparent;

      row,
      row.activatable {
        background-color: transparent;
        color: $inverted_fg_color;
        transition: none;
      }
    }

    undershoot { // remove undershoot
      &.top,
      &.bottom,
      &.left,
      &.right { background-image: none; }
    }
  }

  // hide weird separator
  box > box > separator {
    border: 0 none transparent;
    color: transparent;
    background-color: transparent;
  }

  box > box {
    entry {
      color: $inverted_fg_color;
      caret-color: $inverted_fg_color;
      &:focus {
        color: $selected_fg_color;
        caret-color: $selected_fg_color;
      }
      &:disabled { color: $insensitive_inverted_fg_color; }

      image {
        &:not(:hover):not(:active) { color: $inverted_fg_color; }
        &:active { color: $selected_bg_color; }
        &:disabled { color: $insensitive_inverted_fg_color; }
      }
    }
  }

  scrollbar {
    border: none;
    background: none;

    slider {
      background-color: gtkopacity($inverted_tertiary_fg_color, 0.55);
      &:hover {
        background-color: gtkopacity($inverted_secondary_fg_color, 0.55);
      }
      &:active { background-color: $inverted_fg_color; }
      &:disabled { opacity: 0.4; }
    }
  }

  // 'close' button
  button.image-button {
    color: $secondary_accent_color;
    &:hover,
    &:active,
    &:checked { color: $accent_color; }
    &:disabled { color: gtkopacity($accent_color, 0.4); }
  }
}
/* ... */

